--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,7 @@
 {
   "name": "csv-dashgen",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "description": "Upload any CSV and auto-generate charts and summary stats.",
   "scripts": {
@@ -22,9 +23,11 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.2",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
@@ -42,7 +45,6 @@
     "lint-staged": "^16.1.5",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4.1.12",
     "typescript": "^5.4.3",
     "vite": "^5.2.7",
     "vitest": "^1.4.0"
