--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.6.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^10.1.8",
